Add page titles

--- a/static/three/index.html
+++ b/static/three/index.html
@@ -2,6 +2,7 @@
   <link rel="stylesheet" href="../styles/theme.css"/>
 </head>
 <body>
+  <h1>#3 Slider: introduce state</h1>
   <main></main>
   <script src="scripts/app.js"></script>
 </body>
