--- a/static/two/index.html
+++ b/static/two/index.html
@@ -2,6 +2,7 @@
   <link rel="stylesheet" href="../styles/theme.css"/>
 </head>
 <body>
+  <h1>#2 Slider: beginning</h1>
   <main></main>
   <script src="scripts/app.js"></script>
 </body>
