--- a/static/2-slider-intro/index.html
+++ b/static/2-slider-intro/index.html
@@ -2,7 +2,7 @@
   <link rel="stylesheet" href="../styles/theme.css"/>
 </head>
 <body>
-  <h1>#2 Slider: beginning</h1>
+  <h1>#2 Slider: intro</h1>
   <main></main>
   <script src="scripts/app.js"></script>
 </body>
