--- a/static/5-slider-colors/index.html
+++ b/static/5-slider-colors/index.html
@@ -2,7 +2,7 @@
   <link rel="stylesheet" href="../styles/theme.css"/>
 </head>
 <body>
-  <h1>#4 Slider: more sliders</h1>
+  <h1>#5 Slider: colors</h1>
   <main></main>
   <script src="scripts/app.js"></script>
 </body>
