--- a/static/1.1-timer/index.html
+++ b/static/1.1-timer/index.html
@@ -3,7 +3,7 @@
 </head>
 <body>
   <a href="../index.html">Back</a>
-  <h1>#3 Slider: introduce state</h1>
+  <h1>#1.1 Timer</h1>
   <main></main>
 
   <script src="../scripts/vendors.js"></script>
