--- a/static/3.2-slider-state/index.html
+++ b/static/3.2-slider-state/index.html
@@ -3,7 +3,7 @@
 </head>
 <body>
   <a href="../index.html">Back</a>
-  <h1>#1 Hello world</h1>
+  <h1>#3.2 Slider: introduce state</h1>
   <main></main>
 
   <script src="../scripts/vendors.js"></script>
