--- a/static/3.3-slider-multiple/index.html
+++ b/static/3.3-slider-multiple/index.html
@@ -3,7 +3,7 @@
 </head>
 <body>
   <a href="../index.html">Back</a>
-  <h1>#0 Timer</h1>
+  <h1>#3.3 Slider: more sliders</h1>
   <main></main>
 
   <script src="../scripts/vendors.js"></script>
