Split hello example on two: input, footer

--- a/static/index.html
+++ b/static/index.html
@@ -1,7 +1,8 @@
 <body>
   <ul>
     <li><a href="1.1-timer/index.html">#1.1 Timer</a></li>
-    <li><a href="2.1-hello/index.html">#2.1 Hello</a></li>
+    <li><a href="2.1-hello-input/index.html">#2.1 Hello: input</a></li>
+    <li><a href="2.2-hello-footer/index.html">#2.2 Hello: footer</a></li>
     <li><a href="3.1-slider-intro/index.html">#3.1 Slider: intro</a></li>
     <li><a href="3.2-slider-state/index.html">#3.2 Slider: state</a></li>
     <li><a href="3.3-slider-multiple/index.html">#3.3 Slider: multiple</a></li>
