--- a/static/2.2-hello-footer/index.html
+++ b/static/2.2-hello-footer/index.html
@@ -3,7 +3,7 @@
 </head>
 <body>
   <a href="../index.html">Back</a>
-  <h1>#2.1 Hello world</h1>
+  <h1>#2.2 Hello: footer</h1>
   <main></main>
 
   <script src="../scripts/vendors.js"></script>
