Add title to home page

--- a/static/index.html
+++ b/static/index.html
@@ -1,4 +1,8 @@
+<head>
+  <title>CycleJS example apps</title>
+</head>
 <body>
+  <h1>CycleJS example apps</h1>
   <ul>
     <li><a href="1.1-timer/index.html">#1.1 Timer</a></li>
     <li><a href="2.1-hello-input/index.html">#2.1 Hello: input</a></li>
