--- a/static/index.html
+++ b/static/index.html
@@ -11,5 +11,6 @@
     <li><a href="3.2-slider-state/index.html">#3.2 Slider: state</a></li>
     <li><a href="3.3-slider-multiple/index.html">#3.3 Slider: multiple</a></li>
     <li><a href="3.4-slider-colors/index.html">#3.4 Slider: colors</a></li>
+    <li><a href="4.1-menu-basic/index.html">#4.1 Menu: basic</a></li>
   </ul>
 </body>
