Remove body padding style, use bootstrap class

--- a/examples/3.1-slider-intro/index.html
+++ b/examples/3.1-slider-intro/index.html
@@ -2,7 +2,7 @@
   <link rel="stylesheet" href="../../vendors/bootstrap/dist/css/bootstrap.min.css"/>
   <link rel="stylesheet" href="dist/styles/theme.css"/>
 </head>
-<body>
+<body class="container">
   <h1>#3.1 Slider: intro</h1>
   <main></main>
 
