--- a/examples/2.1-hello-input/index.html
+++ b/examples/2.1-hello-input/index.html
@@ -2,7 +2,7 @@
   <link rel="stylesheet" href="../../vendors/bootstrap/dist/css/bootstrap.min.css"/>
   <link rel="stylesheet" href="dist/styles/theme.css"/>
 </head>
-<body>
+<body class="container">
   <h1>#2.1 Hello: input</h1>
   <main></main>
 
