--- a/examples/3.2-slider-state/index.html
+++ b/examples/3.2-slider-state/index.html
@@ -2,7 +2,7 @@
   <link rel="stylesheet" href="../../vendors/bootstrap/dist/css/bootstrap.min.css"/>
   <link rel="stylesheet" href="dist/styles/theme.css"/>
 </head>
-<body>
+<body class="container">
   <h1>#3.2 Slider: state</h1>
   <main></main>
 
