--- a/examples/3.3-slider-multiple/index.html
+++ b/examples/3.3-slider-multiple/index.html
@@ -2,7 +2,7 @@
   <link rel="stylesheet" href="../../vendors/bootstrap/dist/css/bootstrap.min.css"/>
   <link rel="stylesheet" href="dist/styles/theme.css"/>
 </head>
-<body>
+<body class="container">
   <h1>#3.3 Slider: multiple</h1>
   <main></main>
 
