--- a/examples/3.4-slider-colors/index.html
+++ b/examples/3.4-slider-colors/index.html
@@ -2,7 +2,7 @@
   <link rel="stylesheet" href="../../vendors/bootstrap/dist/css/bootstrap.min.css"/>
   <link rel="stylesheet" href="dist/styles/theme.css"/>
 </head>
-<body>
+<body class="container">
   <h1>#3.4 Slider: colors</h1>
   <main></main>
 
