--- a/examples/5.1-search-client/index.html
+++ b/examples/5.1-search-client/index.html
@@ -2,7 +2,7 @@
   <link rel="stylesheet" href="../../vendors/bootstrap/dist/css/bootstrap.min.css"/>
   <link rel="stylesheet" href="dist/styles/theme.css"/>
 </head>
-<body>
+<body class="container">
   <h1>#5.1 Search: client</h1>
   <main></main>
 
