--- a/1.3-final/dev.html
+++ b/1.3-final/dev.html
@@ -4,7 +4,8 @@
   <link rel="stylesheet" href="./styles/theme.css">
 </head>
 <body>
-  <main id="main"></main>
+  <div id="app-1"></div>
+  <div id="app-2"></div>
 
-  <script src="http://localhost:2992/1.2-hello-nodes/public/bundle.js"></script>
+  <script src="http://localhost:2992/1.3-final/public/bundle.js"></script>
 </body>
