Switch main id to "app"

--- a/1.0-hello-cycle/dev.html
+++ b/1.0-hello-cycle/dev.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" href="./styles/theme.css">
 </head>
 <body>
-  <main id="main"></main>
+  <main id="app"></main>
 
   <script src="http://localhost:2992/1.0-hello-cycle/public/bundle.js"></script>
 </body>
