--- a/1.1-hello-components/index.html
+++ b/1.1-hello-components/index.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" href="./styles/theme.css">
 </head>
 <body>
-  <main id="main"></main>
+  <main id="app"></main>
 
   <script src="public/bundle.js"></script>
 </body>
