--- a/1.2-hello-nodes/dev.html
+++ b/1.2-hello-nodes/dev.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" href="./styles/theme.css">
 </head>
 <body>
-  <main id="main"></main>
+  <main id="app"></main>
 
   <script src="http://localhost:2992/1.2-hello-nodes/public/bundle.js"></script>
 </body>
