--- a/1.3-hello-apps/dev.html
+++ b/1.3-hello-apps/dev.html
@@ -7,5 +7,5 @@
   <div id="app-1"></div>
   <div id="app-2"></div>
 
-  <script src="http://localhost:2992/1.3-hello-apps/public/bundle.js"></script>
+  <script src="http://localhost:2992/1.3-hello-apps/public/app.js"></script>
 </body>
