--- a/1.0-hello-cycle/index.html
+++ b/1.0-hello-cycle/index.html
@@ -6,5 +6,5 @@
 <body>
   <main id="app"></main>
 
-  <script src="public/app.js"></script>
+  <script src="http://localhost:2992/1.0-hello-cycle/public/app.js"></script>
 </body>
