--- a/1.2-hello-components/index.html
+++ b/1.2-hello-components/index.html
@@ -6,5 +6,5 @@
 <body>
   <main id="app"></main>
 
-  <script src="public/app.js"></script>
+  <script src="http://localhost:2992/1.2-hello-components/public/app.js"></script>
 </body>
