--- a/1.3-hello-apps/index.html
+++ b/1.3-hello-apps/index.html
@@ -4,7 +4,8 @@
   <link rel="stylesheet" href="./styles/theme.css">
 </head>
 <body>
-  <main id="app"></main>
+  <div id="app-1"></div>
+  <div id="app-2"></div>
 
-  <script src="public/app.js"></script>
+  <script src="http://localhost:2992/1.3-hello-apps/public/app.js"></script>
 </body>
