--- a/2.00-timer-basic/index.html
+++ b/2.00-timer-basic/index.html
@@ -6,5 +6,5 @@
 <body>
   <main id="app"></main>
 
-  <script src="public/app.js"></script>
+  <script src="http://localhost:2992/2.00-timer-basic/public/app.js"></script>
 </body>
