Refactor all examples

--- a/1.1-form/index.html
+++ b/1.1-form/index.html
@@ -8,5 +8,5 @@
 <body>
   <main id="app"></main>
 
-  <script src="public/bundle.js"></script>
+  <script src="http://localhost:2992/public/bundle.js"></script>
 </body>
