--- a/3.0-crud/index.html
+++ b/3.0-crud/index.html
@@ -1,3 +1,4 @@
+<html>
 <head>
   <style>
     div.form-element {
@@ -13,3 +14,4 @@
 
   <script src="http://localhost:2992/public/bundle.js"></script>
 </body>
+</html>
