--- a/1.4-form/index.html
+++ b/1.4-form/index.html
@@ -1,3 +1,4 @@
+<html>
 <head>
   <style>
     div.form-element {
@@ -10,3 +11,4 @@
 
   <script src="http://localhost:2992/public/bundle.js"></script>
 </body>
+</html>
