--- a/2.1-routing/index.html
+++ b/2.1-routing/index.html
@@ -1,3 +1,4 @@
+<html>
 <head>
   <style>
     a.active {
@@ -10,3 +11,4 @@
 
   <script src="http://localhost:2992/public/bundle.js"></script>
 </body>
+</html>
