New build & serve system

--- a/1.0-form/public/index.html
+++ b/1.0-form/public/index.html
@@ -4,14 +4,11 @@
     div.form-element {
       margin-bottom: 1em;
     }
-    a.active {
-      font-weight: bold;
-    }
   </style>
 </head>
 <body>
   <main id="app"></main>
 
-  <script src="http://localhost:2992/public/bundle.js"></script>
+  <script src="/bundle.js"></script>
 </body>
 </html>
