--- a/3.0-crud/public/index.html
+++ b/3.0-crud/public/index.html
@@ -1,6 +1,9 @@
 <html>
 <head>
   <style>
+    div.form-element {
+      margin-bottom: 1em;
+    }
     a.active {
       font-weight: bold;
     }
@@ -9,6 +12,6 @@
 <body>
   <main id="app"></main>
 
-  <script src="http://localhost:2992/public/bundle.js"></script>
+  <script src="/bundle.js"></script>
 </body>
 </html>
