--- a/1.2-form/public/index.html
+++ b/1.2-form/public/index.html
@@ -9,6 +9,6 @@
 <body>
   <main id="app"></main>
 
-  <script src="http://localhost:2992/public/bundle.js"></script>
+  <script src="/bundle.js"></script>
 </body>
 </html>
